--- a/index.css
+++ b/index.css
@@ -1,3 +1,5 @@
+/* homepage */
+
 html,
 body {
   font-family: Arial, Helvetica, sans-serif;
@@ -5,21 +7,21 @@ body {
   margin: 0 auto;
 }
 
+/* header image */
 header {
   height: 60vh;
-  width: 100vw;
-
   transition: 1s;
 }
 
 #header-image {
   position: relative;
   top: -18%;
-  height: 60vh;
+  height: 55vh;
   width: 100%;
   z-index: -2;
 }
 
+/* nav bar */
 nav {
   display: flex;
   flex-direction: row;
@@ -31,14 +33,14 @@ nav {
 #nav-header {
   font-weight: 100;
   margin-left: 3%;
-  font-size: 40px;
+  font-size: 30px;
 }
 
 /* hele nav-baren */
 .nav-container {
   display: flex;
   flex-direction: row;
-  width: 30%;
+  width: 40%;
   gap: 10%;
 }
 
@@ -71,7 +73,7 @@ nav {
   margin-left: 3%;
 }
 
-a {
+nav a {
   text-decoration: none;
   color: black;
 }
@@ -84,6 +86,7 @@ a {
   width: 90%;
   margin: 0 auto;
   gap: 5%;
+  margin-bottom: 0,5%;
 }
 
 .box {
@@ -110,10 +113,11 @@ a {
   height: 100%;
 }
 
+
+/* footer */ 
 footer {
   width: 100%;
-  height: 5vh;
-  margin-top: 4%;
+  height: 8vh;
   position: relative;
   bottom: 0;
   background-color: lightgray;
@@ -127,20 +131,50 @@ footer {
   align-items: center;
   gap: 5%;
   width: 100%;
+  margin-top: 10%;
 }
 
 .icon-container {
   display: flex;
   flex-direction: row;
-  gap: 5%;
+  gap: 7%;
 }
 
 #social-icon {
-  width: 50px;
-  height: 50px;
+  width: 40px;
+  height: 40px;
 }
 
 #footer-text {
   text-align: center;
   font-size: 20px;
 }
+
+
+/* Animaasjon av en edderkopp som beveger seg over siden */
+
+@keyframes slide {
+    0% {
+        transform: translateX(100%);
+        
+        
+    }
+    50% {
+        transform: translateX(50%);
+        left: 50%;
+    }
+    100% {
+        transform: translateX(0%);
+        left: -30%;
+    }
+}
+
+#animation-box {
+    position: absolute;
+    z-index: 5;
+    left: 80%;
+    width: 200px;
+    animation: slide 5s ease-in-out forwards infinite;
+
+}
+
