--- a/css/index.css
+++ b/css/index.css
@@ -5,6 +5,7 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   height: 100vh;
   margin: 0 auto;
+  overflow-x: hidden;
 }
 
 /* header image */
@@ -40,7 +41,7 @@ nav {
 .nav-container {
   display: flex;
   flex-direction: row;
-  width: 40%;
+  width: 30%;
   gap: 10%;
 }
 
@@ -75,7 +76,7 @@ nav {
 
 nav a {
   text-decoration: none;
-  color: black;
+  color: #000;
 }
 
 .box-section {
@@ -86,7 +87,7 @@ nav a {
   width: 90%;
   margin: 0 auto;
   gap: 5%;
-  margin-bottom: 0,5%;
+  margin-bottom: 0, 5%;
 }
 
 .box {
@@ -96,32 +97,37 @@ nav a {
   margin-bottom: 4%;
   cursor: pointer;
   transition: 1s;
+  
 }
+
+.box a, .box a:visited {
+  text-decoration: none;
+  color: #000;
+}
+
 
 .box:hover {
   transform: scale(1.1);
   transition: 1s;
 }
 
-#image-text {
+.img-gallery-txt {
   text-align: center;
   font-size: 20px;
 }
 
-#image {
+.img-gallery {
   width: 100%;
   height: 100%;
 }
 
-
-/* footer */ 
+/* footer */
 footer {
   width: 100%;
   height: 8vh;
   position: relative;
   bottom: 0;
-  background-color: lightgray;
-
+  background-color: #f2f2f2;
 }
 
 .footer-container {
@@ -140,7 +146,7 @@ footer {
   gap: 7%;
 }
 
-#social-icon {
+.social-icon {
   width: 40px;
   height: 40px;
 }
@@ -150,31 +156,26 @@ footer {
   font-size: 20px;
 }
 
-
 /* Animaasjon av en edderkopp som beveger seg over siden */
 
 @keyframes slide {
-    0% {
-        transform: translateX(100%);
-        
-        
-    }
-    50% {
-        transform: translateX(50%);
-        left: 50%;
-    }
-    100% {
-        transform: translateX(0%);
-        left: -30%;
-    }
+  0% {
+    transform: translateX(100%);
+  }
+  50% {
+    transform: translateX(50%);
+    left: 50%;
+  }
+  100% {
+    transform: translateX(0%);
+    left: -30%;
+  }
 }
 
 #animation-box {
-    position: absolute;
-    z-index: 5;
-    left: 80%;
-    width: 200px;
-    animation: slide 5s ease-in-out forwards infinite;
-
+  position: absolute;
+  z-index: 5;
+  left: 80%;
+  width: 200px;
+  animation: slide 3s ease-in-out forwards infinite;
 }
-
