--- a/css/attractions.css
+++ b/css/attractions.css
@@ -1,11 +1,10 @@
 /*Starten av body*/
+html,
 body {
   font-family: Arial, Helvetica, sans-serif;
-  background: #fff;
+  height: 100vh;
+  margin: 0 auto;
   overflow-x: hidden;
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
 }
 /*Slutten av body*/
 
@@ -59,232 +58,179 @@ nav a {
 
 /*Slutten av navigasjons-bar*/
 
-    body{
-        margin: 0;
-        padding: 0;
-
-        
-
-
-
-    }
-
-
-
-   nav {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    z-index: 1;
-    background-color: lightgray;
-   }
-  
-  #nav-header {
-    font-weight: 100;
-    margin-left: 3%;
-    font-size: 30px;
-    
-  }
-  
-  /* hele nav-baren */
-  .nav-container {
-    display: flex;
-    flex-direction: row;
-    width: 40%;
-    gap: 10%;
-  }
-  
-  /*  individuelle linker */
-  .nav-link {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    text-decoration: none;
-    color: #0000;
-    text-align: center;
-    list-style: none;
-    transition: 1s;
-    font-size: 20px;
-  }
-  
-  .nav-link:hover {
-    color: #7f7e7e;
-    text-decoration: underline;
-    transition: 0.5s;
-    transform: scale(1.2);
-  }
-  footer {
-    width: 100%;
-    height: 8vh;
-    position: relative;
-    bottom: 0;
-    background-color: lightgray;
-    
-  
-  }
-  
-  .footer-container {
-    display: flex;
-    flex-direction: row;
-    margin-left: 5%;
-    align-items: center;
-    gap: 5%;
-    width: 40%;
-    margin-top: 16.4%;
-  }
-  
-  .icon-container {
-    display: flex;
-    flex-direction: row;
-    gap: 7%;
-  }
-  
-  .social-icon {
-    width: 40px;
-    height: 40px;
-  }
-  
-  .footer-text {
-    text-align: center;
-    font-size: 20px;
-  }
-
-  
-
-
-
-  .box-section {
-    flex-direction: row;
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
-    width: 90%;
-    margin: 0 auto;
-    gap: 5%;
-    margin-bottom: 1%;
-    margin-top: 10%;
-  }
-  
-  .box {
-    width: 30%;
-    height: 25vh;
-    background-color: #f1f1f1;
-    margin-bottom: 3%;
-    cursor: pointer;
-    transition: 1s;
-  }
-  
-  .images:hover {
-    
-    transform: scale(1.1);
-    transition: 1s;
-  }
-  
-  #image-text {
-    text-align: center;
-    font-size: 25px;
-  }
-  
-  .image {
-    height: 350px;
-    width: 350px;
-  }
-  #h1{
-position: absolute;
-width: 758px;
-height: 41px;
-left: 45%;
-
-top: 170px;
-
-font-style: normal;
-font-weight: 400;
-font-size: 40px;
-line-height: 55px;
-display: flex;
-align-items: center;
-text-align: center;
-
-color: #000000;
-
-
-  }
-  
-  .animation{
-       
-    position: absolute;
-    top: -10%;
-    height: 10%;
-    margin: 10%;
-    width: 37%;
-    left: 50%;
-
-
-
-  }
-  #plane{
-    height: 150%;
-    animation-name: flyingplane;
-    animation-duration: 6s;
-    animation-fill-mode: forwards;
+/* seksjon med flexbox */
+.container {
+  width: 100%;
+  padding: 20px;
+  margin: 100px auto;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
 }
 
-   @keyframes flyingplane {
+.box {
+  width: 350px;
+  margin: 0 10px;
+  box-shadow: 0 0 20px 2px rgba(0, 0, 0, 0.1);
+  transition: 1s;
+}
+.box img {
+  display: block;
+  width: 100%;
+  border-radius: 5px;
+}
+.box:hover {
+  transform: scale(1.3);
+  z-index: 2;
+}
 
-    0%{
-        right: 0%;
-        transform: rotateY(0deg);
+/* Footer */
 
+footer {
+  width: 100%;
+  height: 8vh;
+  position: relative;
+  bottom: 0;
+  background-color: lightgray;
+}
 
-    }
-    50%{
-        right: 85%;
+.footer-container {
+  display: flex;
+  flex-direction: row;
+  margin-left: 5%;
+  align-items: center;
+  gap: 5%;
+  width: 40%;
+  margin-top: 16.4%;
+}
 
+.icon-container {
+  display: flex;
+  flex-direction: row;
+  gap: 7%;
+}
 
+.social-icon {
+  width: 40px;
+  height: 40px;
+}
 
+.footer-text {
+  text-align: center;
+  font-size: 20px;
+}
 
-    } 90%{
-        right: 100%;
-        transform: rotateY(180deg)
+.box-section {
+  flex-direction: row;
+  display: flex;
+  justify-content: space-evenly;
+  width: 90%;
+  margin: 0 auto;
+  gap: 5%;
+  margin-bottom: 1%;
+  margin-top: 10%;
+}
 
+.images:hover {
+  transform: scale(1.1);
+  transition: 1s;
+}
 
-    }
+#image-text {
+  text-align: center;
+  font-size: 25px;
+}
 
-    100%{
-        right: 0;
-        transform: rotateY(180deg);
+.image {
+  width: 100%;
+}
+#attractions-h1 {
+  position: relative;
+  left: 40%;
+  top: 10%;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 40px;
+  line-height: 55px;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  color: #000000;
+}
 
+.animation {
+  position: absolute;
+  top: -10%;
+  height: 10%;
+  margin: 10%;
+  width: 37%;
+  left: 50%;
+}
 
+#plane {
+  height: 150%;
+  animation-name: flyingplane;
+  animation-duration: 6s;
+  animation-fill-mode: forwards;
+}
 
+@keyframes flyingplane {
+  0% {
+    right: 0%;
+    transform: rotateY(0deg);
+  }
 
-    }
-    
-   }
+  50% {
+    right: 85%;
+  }
 
+  90% {
+    right: 100%;
+    transform: rotateY(180deg);
+  }
 
-  
+  100% {
+    right: 0;
+    transform: rotateY(180deg);
+  }
+}
 
+/*Starten av Footer med Sosiale medier ikoner */
+footer {
+  width: 100%;
+  height: 8vh;
+  position: relative;
+  bottom: 0;
+  background-color: #d9d9d9;
+}
 
+.footer-container {
+  display: flex;
+  flex-direction: row;
+  margin-left: 5%;
+  align-items: center;
+  width: 100%;
+  margin-top: 10%;
+  gap: 2%;
+}
 
+.icon-container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  width: 15%;
+  gap: 2%;
+}
 
+#social-icon {
+  width: 25%;
+  height: 25%;
+}
 
-
-  
-
-  
-
-
-
-
-
-
-
-
-
-
-
-
-
+#footer-text {
+  font-size: 20px;
+}
+/*Slutten av Footer med Sosiale medier ikoner */
 
 /*Starten av Footer med Sosiale medier ikoner */
 footer {
