--- a/css/culture.css
+++ b/css/culture.css
@@ -168,7 +168,7 @@ nav a {
 /*Starten av Footer med Sosiale medier ikoner */
 footer {
   width: 100%;
-  height: 8vh;
+  height: fit-content;
   position: relative;
   bottom: 0;
   background-color: #d9d9d9;
